manifests/cloudflared-tfc-eda/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudflared-tfc-eda
  labels:
    app.kubernetes.io/name: cloudflared
    app.kubernetes.io/component: tfc-eda-tunnel
